# DjangoReactFlash

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: conftest.py
backend/backend/: settings.py  urls.py
backend/backend/commands/management/: defaultsuperuser.py
backend/backend/tests/: test_server.py
backend/core/: authentication.py  serializers.py  urls.py  views.py
backend/core/management/commands/: adminsuperuser.py  deletemakemigrations.py
backend/core/tests/: test_views.py
backend/flashcards/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/flashcards/tests/: test_views.py
deployment/: Dockerfile  deploy.sh  deployment_filestructure.txt  docker-compose-deploy.yml  gunicorn.service  nginx.conf  nginx.service  pg_admin_db_setup.json
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  backend_entry.sh  gunicorn.service  gunicorn.socket  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Alert.tsx  Button.tsx  Card.tsx  Collapsible.tsx  FlashcardForm.tsx  FlashcardList.tsx  FlashcardStackForm.tsx  FlashcardStackList.tsx  ListGroup.tsx  LoginForm.tsx  MyModal.tsx  Navbar.tsx  RegisterForm.tsx  StackModal.tsx
frontend/src/components/toasts/: Toast.tsx  ToastManager.tsx
