[tool.poetry]
name = "djangoreactflash"
version = "0.1.0"
description = ""
authors = ["Liam O'Brien <liam.obrien@atteris.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
pytest = "^7.4.1"
pillow = "^10.0.0"
pyjwt = "^2.8.0"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
